实现列表和详情页

--- a/pages/activity/activity.wxml
+++ b/pages/activity/activity.wxml
@@ -1,2 +1,25 @@
 <!--pages/activity/activity.wxml-->
-<text>pages/activity/activity.wxml</text>
+<view class="container">
+  <image class="news-image" src="{{info.image}}"></image>
+  <view class="fix">
+    <text class="title">{{info.title}}</text>
+    <view class="info">
+      <view class="author-info">
+        <text class="author-name">作者：{{info.author}} </text>
+        <text class="author-date">发表于 {{info.publishDate}} </text>
+      </view>
+      <view class="operation">
+        <image wx:if="{{flag}}" bindtap="changeCollect" src="../../icon/collected.png"></image>
+        <image wx:else bindtap="changeCollect" src="../../icon/no_collected.png"></image>
+      </view>
+    </view> 
+  </view>
+  <view style="border-bottom:1rpx solid #707070;width:100%"></view>
+  <view wx:for="{{info.detail}}">
+    <view decode=true" class="detail" user-select="true">{{item}}</view>
+</view>
+</view>
+
+<view>
+    <button style="border-radius: 20ch;" bindtap="gotoRegistration">活动报名</button>
+</view>
