--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,5 +1,3 @@
-
-
 page {
   background: #f2f2f2;
 }
@@ -39,4 +37,25 @@ page {
   margin: 0 10rpx;
   padding: 0 20rpx;
   flex: 1;
+}
+.newsActivityButton{
+  border-radius: 20px;
+  color: #2196F3;
+}
+
+.news-item {
+  margin: 30rpx;
+}
+.title {
+  font-size: 40rpx;
+  font-weight: bold;
+  letter-spacing: 2px;
+  color: #313131;
+}
+
+.author-info {
+  margin:20rpx 0;
+  text-align: right;
+  color: #707070;
+  font-size: small;
 }
