--- a/pages/news/news.wxss
+++ b/pages/news/news.wxss
@@ -1,1 +1,46 @@
 /* pages/news/news.wxss */
+.container{
+  padding:0;
+}
+.news-image {
+  width: 100%;
+  height: 460rpx;
+}
+.fix{
+  margin:30rpx 30rpx 0rpx 30rpx;
+}
+.title {
+  font-size: 40rpx;
+  font-weight: bold;
+  letter-spacing: 2px;
+  color: #313131;
+}
+
+.info{
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content:space-between;
+  color: #707070;
+  font-size: small;
+}
+.operation Image {
+  width: 90rpx;
+  height: 90rpx;
+}
+
+.share-img {
+  margin-left: 30rpx;
+}
+
+
+
+.detail {
+  margin:16rpx;
+  line-height: 44rpx;
+  letter-spacing: 2px;
+  font-size: 32rpx;
+  text-align: justify;
+  line-height:2;
+  text-indent:2em;
+}
