--- a/pages/detailinfo/detailinfo.wxml
+++ b/pages/detailinfo/detailinfo.wxml
@@ -1,2 +1,110 @@
 <!--pages/detailinfo/detailinfo.wxml-->
+<view class="head">
+  <view class="icon">
+    <button class="avatar" open-type="chooseAvatar" bind:chooseavatar="onChooseAvatar">
+    <image src="{{avatarUrl}}" mode="heightFix"></image>
+    </button>
+    <text>编辑头像</text>
+  </view>
+  <view>
+    <view class="info">
+      <div style="color: red">*</div>
+      <text style="width: 100rpx;">姓名:</text>
+      <textarea class="input1" placeholder="请输入姓名" type="text"></textarea>
+    </view>
+    <view class="section">
+    <picker bindchange="bindPickerChange" value="{{gender}}" range="{{gendercl}}">
+      <view class="picker">
+        <view class="location1">
+        <text style="color: red;">*</text>
+        性别:
+        </view>
+        <text class="color6">{{gender}}</text>
+      </view>
+    </picker>
+    </view>
+    <view class="section">
+    <picker bindchange="bindPickerChange1" value="{{city}}" range="{{citycl}}">
+      <view class="picker">
+        <view class="location1">所在地:</view>
+        <text class="color6">{{city}}</text>
+      </view>
+    </picker>
+    </view>
+  </view>
+</view>
 
+<view>
+  <view class="picker">
+    <picker mode="date" header-text="选择日期"  value="{{birthday}}" bindchange="bindDateChange">
+    <view class="font30">
+      <view class="location2">
+      <text style="color: red;">*</text>
+      出生日期:
+      </view>
+      <text class="color6">{{birthday}}</text>
+    </view>
+    </picker>
+  </view>
+  <view class="section">
+    <picker bindchange="bindPickerChange2" value="{{grade}}" range="{{gradecl}}">
+      <view class="picker">
+        <view class="location2">
+          <text style="color: red;">*</text>
+        年级:
+        </view>
+        <text class="color6">{{grade}}</text>
+      </view>
+    </picker>
+    </view>
+    <view class="section">
+    <picker bindchange="bindPickerChange3" value="{{major}}" range="{{majorcl}}">
+      <view class="picker">
+        <view class="location2">
+          <text style="color: red;">*</text>
+        专业:
+        </view>
+        <text class="color6">{{major}}</text>
+      </view>
+    </picker>
+    </view>
+    <view class="section">
+    <picker bindchange="bindPickerChange4" value="{{class}}" range="{{classcl}}">
+      <view class="picker">
+        <view class="location2">班级:</view>
+        <text class="color6">{{class}}</text>
+      </view>
+    </picker>
+    </view>
+    <view class="section">
+    <picker bindchange="bindPickerChange5" value="{{term}}" range="{{termcl}}">
+      <view class="picker">
+        <view class="location2">就读阶段:</view>
+        <text class="color6">{{term}}</text>
+      </view>
+    </picker>
+    </view>
+</view>
+<view>
+  <view class="info">
+      <text style="width: 120rpx;">手机号</text>
+      <textarea class="input2" placeholder="请输入手机号码" type="text"></textarea>
+    </view>
+    <view class="info">
+      <text style="width: 120rpx;">邮箱:</text>
+      <textarea show-confirm-bar= "false" class="input2" placeholder="请输入邮箱信息" type="text"></textarea>
+    </view>
+    <view class="info">
+      <text style="width: 120rpx;">公司:</text>
+      <textarea class="input2" placeholder="请输入公司名称" type="text"></textarea>
+    </view>
+    <view class="info">
+      <text style="width: 120rpx;">职务:</text>
+      <textarea class="input2" placeholder="请输入职务名称" type="text"></textarea>
+    </view>
+</view>
+<view>
+<button class="submit" style="background-color: dodgerblue;" size="mini" type="primary"  form-type="submit">
+<text style="line-height: 80rpx;font-size: 28rpx;">确认</text>
+</button>
+</view>
