--- a/pages/detailinfo/detailinfo.wxss
+++ b/pages/detailinfo/detailinfo.wxss
@@ -1,1 +1,93 @@
 /* pages/detailinfo/detailinfo.wxss */
+page{
+  width: 100%;
+  height: 100%;
+  position: fixed;
+}
+.head{
+  height: 300rpx;
+  margin-top: 30rpx;
+  margin-left: 50rpx;
+  margin-right: 50rpx;
+  display: flex;
+  
+}
+.icon{
+  margin-right: 20rpx;
+  height: 300rpx;
+  width: 200rpx;
+  text-align: center;
+}
+.avatar{
+  padding: 0;
+  height: 200rpx;
+  width: 200rpx;
+  border-radius: 100rpx;
+}
+.avatar image{
+  height: 100%;
+  border-radius: 100rpx;
+}
+.icon text{
+  font-size: 25rpx;
+  color:gray;
+}
+.pop{
+  height: 75rpx;
+  display: flex;
+  flex-direction: row;
+}
+.location1{
+  width: 140rpx;
+}
+.location2{
+  width: 240rpx;
+}
+.font30{
+  font-size: 30rpx;
+  display: flex;
+  flex-direction: row;
+}
+.color3{
+  color: #333;
+}
+.color6{
+  color: #666;
+  margin-left: 50rpx;
+}
+.picker{
+  padding-left: 20rpx; 
+  height: 88rpx;
+  width: 500rpx;
+  line-height: 88rpx;
+  display: flex;
+  flex-direction: row;
+}
+.info{
+  padding-left: 20rpx;
+  height: 88rpx;
+  line-height: 88rpx;
+  display: flex; flex-direction: row;
+}
+.info text{
+  width: 130rpx;
+  text-align: center;
+}
+.input1{
+  height: 88rpx;
+  margin-left: 56rpx;
+  padding-top: 8rpx;
+  line-height: 88rpx;
+}
+.input2{
+  height: 88rpx;
+  margin-left: 130rpx;
+  padding-top: 8rpx;
+  line-height: 88rpx;
+}
+.submit{
+  margin-top: 70rpx; 
+  margin-left: 280rpx; 
+  width: 200rpx;
+  height: 80rpx;
+}
