--- a/pages/news/news.wxml
+++ b/pages/news/news.wxml
@@ -15,7 +15,7 @@
     </view> 
   </view>
   <view style="border-bottom:1rpx solid #707070;width:100%"></view>
-  <view wx:for="{{info.detail}}">
+  <view wx:for="{{info.detail}}" wx:key="index">
     <view decode=true" class="detail" user-select="true">{{item}}</view>
 </view>
 </view>
