--- a/pages/registration/registration.wxss
+++ b/pages/registration/registration.wxss
@@ -1,1 +1,39 @@
 /* pages/registration/registration.wxss */
+
+.signContainer {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: white;
+  margin-bottom: 20rpx;
+}
+.infoItem {
+  width: 90%;
+  /* height: 300rpx; */
+  display: flex;
+  align-items: center;
+  /* justify-content: space-between; */
+  padding: 30rpx 10rpx 30rpx 10rpx;
+  border-bottom: 1rpx solid rgb(240, 240, 240);
+}
+.item-label {
+  width: 30%;
+  color: var(--themeColor);
+}
+.item-nav {
+  width: 70%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+
+/* 修改按钮 */
+.personBtn {
+  width:100%;
+  margin-top: 50rpx;
+  /* position: absolute; */
+  /* bottom: 0; */
+  color: white;
+}
