--- a/pages/map/map.wxss
+++ b/pages/map/map.wxss
@@ -1,1 +1,33 @@
 /* pages/map/map.wxss */
+.maparea {
+  position: relative;
+  display: block;
+}
+.mapimg {
+  width: 750rpx;
+}
+.loc {
+  position: absolute;
+  width: 32rpx;
+  height: 32rpx;
+  z-index: 3;
+}
+.info {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 250rpx;
+  height: 100%;
+  opacity: 0.4;
+  background-color:lightgoldenrodyellow;
+  z-index: 2;
+}
+.picker {
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 50rpx;
+  text-align: center;
+  background-color: lightgrey;
+  border-radius: 6rpx;
+}
