--- a/pages/map/map.wxml
+++ b/pages/map/map.wxml
@@ -1,7 +1,10 @@
 <view class="maparea">
   <image src="{{cloudURL}}{{type}}.png"  mode="widthFix" class="mapimg"></image>
-  <image src="../../icon/loc.png" class="loc" wx:for="{{location}}" wx:key="index" bindtap="showinfo" data-id="{{index}}" style="top: {{item.top}}; left:{{item.left}}"></image>
-  <view class="info" wx:if="{{index}}">
+  <view class="loc" wx:for="{{location}}" wx:key="index" bindtap="showinfo" data-title="{{item.title}}" style="top: {{item.top}}; left:{{item.left}}">
+  <image src="../../icon/loc.png" class="icon"></image>
+  <text>{{item.title}}</text>
+  </view>
+  <view class="info" wx:if="{{title}}">
   </view>
 </view>
 <picker bindchange="mapchange" value="{{type}}" range="{{campus}}" class="picker">
