--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -28,8 +28,8 @@
   <view class="news-item" wx:for="{{newsList}}" wx:key="index">
     <view class="title" bindtap="toNewsDetail" data-options="{{item.id}}" >{{item.title}}</view>
     <view class="author-info">
-      <text class="author-name">作者：{{item.author}} </text>
-      <text class="author-date">发表于 {{item.publishDate}}</text>
+      <text class="author-name"> {{item.author}} </text>
+      <text class="author-date"> {{item.publishData}}</text>
     </view>
     <view style="border-bottom:1rpx solid #707070;width:100%"></view>
   </view>
@@ -45,46 +45,14 @@
   <text>活动</text>
 </view>
 
-<!-- 活动静态测试 -->
-<!-- 活动轮播图 -->
-<!-- <view>
-    <swiper class="swiper-container" autoplay indicator-dots="true" indicator-color="black" indicator-active-color="red" circular="true" interval="5000">
-        <block>
-            <swiper-item>
-                <view><image src="https://img-blog.csdnimg.cn/f6d4641911614338a1738e803e8e7eb7.png" mode="widthFix"></image></view>
-                <view class="img_info"><text>疫情当下，校领导走访宿舍关心学生生活。</text></view>
-            </swiper-item>
-            <swiper-item>
-                <view><image src="https://img-blog.csdnimg.cn/694a29cfe8264c1d8578ddd6c08caa51.png" mode="widthFix"></image></view>
-                <view class="img_info"><text>福州大学举行学习贯彻党的二十大精神宣讲团聘任仪式暨集体备课会</text></view>
-            </swiper-item>
-        </block>
-    </swiper>
-</view> -->
-
-<!-- 活动轮播图后端实现 -->
-<!-- <view>
-<swiper autoplay indicator-dots="true" indicator-color="black" indicator-active-color="red" circular="true" interval="5000">
-  <navigator url="../activity/activity">
-    <swiper-item wx:for="{{activitySwiper}}" wx:key="{{index}}" autoplay>
-      <image mode="widthFix" src="{{item.imgSrc}}"></image>
-      <view class="img_info"><text>{{item.title}}</text></view>
-    </swiper-item>
-  </navigator>
-</swiper>
-</view> -->
-
-<!-- <navigator url="../activity/activity">
-    <button class="newsActivityButton">更多活动</button>
-</navigator> -->
 
 <!-- 活动列表 -->
 <view class="conatiner">
   <view class="news-item" wx:for="{{activityList}}" wx:key="index">
     <view class="title" bindtap="toActivityDetail" data-options="{{item.id}}" >{{item.title}}</view>
     <view class="author-info">
-      <text class="author-name">作者：{{item.author}} </text>
-      <text class="author-date">发表于 {{item.publishDate}}</text>
+      <text class="author-name"> {{item.author}} </text>
+      <text class="author-date"> {{item.publishData}}</text>
     </view>
     <view style="border-bottom:1rpx solid #707070;width:100%"></view>
   </view>
