--- a/pages/map/map.wxss
+++ b/pages/map/map.wxss
@@ -13,9 +13,9 @@
   margin: 0 auto;
 }
 .loc {
-  width: 100rpx;
+  width: 96rpx;
   text-align: center;
-  font-size: 14rpx;
+  font-size: 12rpx;
   font-weight: 700;
   color: lightyellow;
   position: absolute;
@@ -27,8 +27,8 @@
   top: 0;
   width: 250rpx;
   height: 100%;
-  opacity: 0.4;
-  background-color:lightcoral;
+  opacity: 0.8;
+  background-color:papayawhip;
   z-index: 2;
 }
 .picker {
@@ -39,4 +39,19 @@
   text-align: center;
   background-color: lightgrey;
   border-radius: 6rpx;
+}
+.detailImg{
+  width: 240rpx;
+  display: block;
+  margin: 0 5rpx;
+  border-radius: 5rpx;
+}
+.detail {
+  margin:10rpx;
+  line-height: 40rpx;
+  letter-spacing: 2px;
+  font-size: 14rpx;
+  text-align: justify;
+  line-height:2;
+  text-indent:2em;
 }
