--- a/pages/aboutus/aboutus.wxss
+++ b/pages/aboutus/aboutus.wxss
@@ -1,19 +1,27 @@
 /* pages/aboutus/aboutus.wxss */
 .container {
+  position: relative;
   box-sizing: border-box;
   width:600rpx;
   height: 1200rpx;
-  padding: -20rpx 20rpx;
   background-color: lightcoral;
   margin: 20px auto;
-  text-indent: 2em;
   font-size: larger;
-  line-height: 200%;
   color: whitesmoke;
   border-radius: 36rpx;
 }
 .yeyy {
+  position: absolute;
   width: 100rpx;
   height: 100rpx;
-  padding-left: 400rpx;
+  top: 40rpx;
+  right: 40rpx;
+}
+.detail {
+  position: absolute;
+  display: block;
+  margin: 28rpx;
+  top: 30rpx;
+  line-height: 44rpx;
+  line-height:2;
 }
