--- a/pages/activity/activity.wxml
+++ b/pages/activity/activity.wxml
@@ -4,14 +4,14 @@
   <view class="fix">
     <text class="title">{{info.title}}</text>
     <view class="info">
-      <view class="author-info">
+      <!-- <view class="author-info">
         <text class="author-name">{{info.author}} </text>
         <text class="author-date">{{info.publishData}} </text>
-      </view>
-      <view class="operation">
+      </view> -->
+      <!-- <view class="operation">
         <image wx:if="{{flag}}" bindtap="changeCollect" src="../../icon/collected.png"></image>
         <image wx:else bindtap="changeCollect" src="../../icon/no_collected.png"></image>
-      </view>
+      </view> -->
     </view> 
   </view>
   <view style="border-bottom:1rpx solid #707070;width:100%"></view>
