--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -27,10 +27,10 @@
 <view class="conatiner">
   <view class="news-item" wx:for="{{newsList}}" wx:key="index">
     <view class="title" bindtap="toNewsDetail" data-options="{{item.id}}" >{{item.title}}</view>
-    <view class="author-info">
+    <!-- <view class="author-info">
       <text class="author-name"> {{item.author}} </text>
       <text class="author-date"> {{item.publishData}}</text>
-    </view>
+    </view> -->
     <view style="border-bottom:1rpx solid #707070;width:100%"></view>
   </view>
 </view>
@@ -50,10 +50,10 @@
 <view class="conatiner">
   <view class="news-item" wx:for="{{activityList}}" wx:key="index">
     <view class="title" bindtap="toActivityDetail" data-options="{{item.id}}" >{{item.title}}</view>
-    <view class="author-info">
+    <!-- <view class="author-info">
       <text class="author-name"> {{item.author}} </text>
       <text class="author-date"> {{item.publishData}}</text>
-    </view>
+    </view> -->
     <view style="border-bottom:1rpx solid #707070;width:100%"></view>
   </view>
 </view>
