头像值传递，图标更改

--- a/pages/homepage/homepage.wxml
+++ b/pages/homepage/homepage.wxml
@@ -24,7 +24,7 @@
 </view>
 
 <view class="item" bindtap="naviToVphoto">
-<image src="/icon/aboutus.png" mode="heightFix"></image>
+<image src="/icon/camera.png" mode="heightFix"></image>
 <text>虚拟合影</text>
 <image src="/icon/next.png" mode="heightFix" class="next"></image>
 </view>
